[gd_scene load_steps=7 format=3 uid="uid://b38k0fa13rxj2"]

[ext_resource type="Script" uid="uid://cr5vkn4udodth" path="res://scenes/players/player.gd" id="1_kc87p"]
[ext_resource type="Texture2D" uid="uid://cpydvk8mq66o5" path="res://assets/tile_0087.png" id="1_ldeu4"]
[ext_resource type="PackedScene" uid="uid://dt4nk135lyedn" path="res://scenes/uis/stats_ui.tscn" id="2_kc87p"]
[ext_resource type="PackedScene" uid="uid://dvrx6hq8b5l1a" path="res://scenes/status_handler/status_handler.tscn" id="4_edvpf"]
[ext_resource type="PackedScene" uid="uid://bflqqcxf8kq2h" path="res://scenes/modifier_handler/modifier_handler.tscn" id="5_sguum"]
[ext_resource type="PackedScene" uid="uid://bhp8kkag36xjm" path="res://scenes/modifier_handler/modifier.tscn" id="6_jwv1m"]

[node name="Player" type="Node2D" groups=["player"]]
script = ExtResource("1_kc87p")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_ldeu4")

[node name="StatsUI" parent="." instance=ExtResource("2_kc87p")]
unique_name_in_owner = true
offset_left = -44.5
offset_top = 9.0
offset_right = 45.5
offset_bottom = 25.0

[node name="StatusHandler" parent="." node_paths=PackedStringArray("status_owner") instance=ExtResource("4_edvpf")]
unique_name_in_owner = true
offset_left = -19.0
offset_top = 23.0
offset_right = -19.0
offset_bottom = 23.0
status_owner = NodePath("..")

[node name="ModifierHandler" parent="." instance=ExtResource("5_sguum")]
unique_name_in_owner = true

[node name="DamageDealtModifier" parent="ModifierHandler" instance=ExtResource("6_jwv1m")]

[node name="DamageTakenModifier" parent="ModifierHandler" instance=ExtResource("6_jwv1m")]
type = 1

[node name="CardCostModifier" parent="ModifierHandler" instance=ExtResource("6_jwv1m")]
type = 2
